[gd_scene load_steps=8 format=3 uid="uid://dhyqyf8twbt1b"]

[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_cao20"]
[ext_resource type="Material" uid="uid://csnkk5ulllaxk" path="res://shaders/sky/sky.material" id="2_54tmj"]
[ext_resource type="Script" path="res://scenes/online_battle/lobby/lobby.gd" id="2_abk6r"]
[ext_resource type="Texture2D" uid="uid://xb7r40nr2rgp" path="res://resources/battlefield_themes/heavenly/sky.png" id="3_h7qip"]
[ext_resource type="PackedScene" uid="uid://7pvca2f5jde1" path="res://scenes/online_battle/lobby/create_room/create_room.tscn" id="3_hwf5s"]
[ext_resource type="PackedScene" uid="uid://d0jrn2xo773qv" path="res://scenes/common/buttons/go_back_button/go_back_button.tscn" id="5_ywhmu"]
[ext_resource type="PackedScene" uid="uid://cniblhu062ir" path="res://scenes/popup/popup.tscn" id="6_5cdxx"]

[node name="Panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cao20")
theme_type_variation = &"PanelDimBlue"
script = ExtResource("2_abk6r")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0

[node name="TextureRect" type="TextureRect" parent="Control"]
material = ExtResource("2_54tmj")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4274.0
offset_bottom = 2411.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.27, 0.27)
texture = ExtResource("3_h7qip")
expand_mode = 1
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Lobby" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_cao20")
theme_override_constants/separation = 10

[node name="MainPanel" type="PanelContainer" parent="MarginContainer/Lobby"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Lobby/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Lobby/MainPanel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="GoBackButton" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/HBoxContainer2/Control" instance=ExtResource("5_ywhmu")]
unique_name_in_owner = true
custom_minimum_size = Vector2(87, 0)
layout_mode = 2
offset_left = -30.0
offset_top = -32.0
offset_right = 57.0
offset_bottom = 55.0

[node name="Label" type="Label" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "@LOBBY"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RefreshButton" type="Button" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "@REFRESH"

[node name="RoomCountLabel" type="Label" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "@LOADING"

[node name="RoomListing" type="ScrollContainer" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer2/RoomListing"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 10

[node name="Rooms" type="VBoxContainer" parent="MarginContainer/Lobby/MainPanel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer2/RoomListing/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Lobby"]
layout_mode = 2

[node name="CreateRoom" parent="MarginContainer/Lobby/VBoxContainer" instance=ExtResource("3_hwf5s")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Lobby/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Lobby/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Lobby/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="AutoMatchmakingButton" type="Button" parent="MarginContainer/Lobby/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "@AUTO_MATCHMAKING"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Lobby/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="JoinWithCodeLabel" type="Label" parent="MarginContainer/Lobby/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "@JOIN_WITH_CODE:"

[node name="RoomCodeInput" type="LineEdit" parent="MarginContainer/Lobby/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
placeholder_text = "..."

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Lobby/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="JoinWithCodeButton" type="Button" parent="MarginContainer/Lobby/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "@JOIN"

[node name="Popup" parent="." instance=ExtResource("6_5cdxx")]
unique_name_in_owner = true
